--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
    <div class="middle-container3">
         <div id="contact">
-          <div class="px-4 py-5 my-5 text-center">
+          <div class="px-4 pyy-5 my-5 text-center">
           <h2 class="projects">Get in Touch</h2>
            <p class="contact-paragraph">Whether you have a potential project in mind, or just want to talk about web development, don't hesitate to reach out. I'm always open to new opportunities and connections in this exciting field.</p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
